configure rally in slackbot cmd

--- a/cmd/slackbot/config.json
+++ b/cmd/slackbot/config.json
@@ -10,5 +10,11 @@
     },
     "prod-engcovfefe": {
         "responder": "covfefe"
+    },
+    "prod-engrally": {
+        "responder": "rally",
+        "user": "",
+        "password": "",
+        "projectID": ""
     }
 }
