quick integration test with slack itself

--- a/cmd/slackbot/config.json
+++ b/cmd/slackbot/config.json
@@ -15,6 +15,9 @@
         "responder": "rally",
         "user": "",
         "password": "",
-        "projectID": ""
+        "projectID": "",
+        "commandMap": {
+            "newcandidatestory": "/new-prodeng-story"
+        }
     }
 }
