--- a/cmd/slackbot/config.json
+++ b/cmd/slackbot/config.json
@@ -7,5 +7,8 @@
         "commandMap": {
             "jobdetails": "/prodeng-job"
         }
+    },
+    "prod-engcovfefe": {
+        "responder": "covfefe"
     }
 }
